--- a/app/src/main/res/layout/activity_checkout_java.xml
+++ b/app/src/main/res/layout/activity_checkout_java.xml
@@ -5,8 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+
     android:background="@drawable/background"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    android:id="@+id/checkout_container"
     tools:context="com.alarees.tailoruserapp.paymentgetway.CheckoutActivityJava">
 
     <ImageView
@@ -31,6 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:textColor="@color/white"
         android:layout_marginTop="20dp"
         android:text="@string/pay" />
     <LinearLayout
