--- a/app/src/main/res/layout/dailog_readymade.xml
+++ b/app/src/main/res/layout/dailog_readymade.xml
@@ -1,44 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="200dp"
+    android:layout_height="200dp"
+    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_gravity="center"
-        >
+        android:layout_gravity="center">
         <TextView
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Please Select One"
-            android:gravity="center"
-            android:textSize="18sp"
+            android:text="Select size"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:padding="10dp"
+            android:textColor="@color/black"
             android:textStyle="bold"/>
         <TextView
             android:id="@+id/rdymd_small"
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Small"
             android:gravity="center"
+            android:padding="5dp"
+            android:background="@drawable/ripple"
+            android:layout_marginTop="5dp"
+            android:text="Small"
             android:textSize="18sp"/>
         <TextView
             android:id="@+id/rdymd_medium"
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Medium"
             android:gravity="center"
+            android:padding="5dp"
+            android:background="@drawable/ripple"
+            android:text="Medium"
             android:textSize="18sp"/>
         <TextView
             android:id="@+id/rdymd_large"
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Large"
+            android:background="@drawable/ripple"
             android:gravity="center"
+            android:padding="5dp"
+            android:text="Large"
             android:textSize="18sp"/>
     </LinearLayout>
-
 </LinearLayout>
