--- a/app/src/main/res/layout/fragment_more_item_list.xml
+++ b/app/src/main/res/layout/fragment_more_item_list.xml
@@ -8,6 +8,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/background"
     android:orientation="vertical"
+    android:id="@+id/more_container"
     tools:context="com.alarees.tailoruserapp.more.MoreItemFragment"
     >
 
