--- a/app/src/main/res/layout/fragment_ready_made_items.xml
+++ b/app/src/main/res/layout/fragment_ready_made_items.xml
@@ -34,6 +34,7 @@
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
+       android:id="@+id/readymade_container"
        android:background="@drawable/background"
        android:orientation="vertical">
     <FrameLayout
