--- a/app/src/main/res/layout/fragment_unstitched_items.xml
+++ b/app/src/main/res/layout/fragment_unstitched_items.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/green_900"
+
     tools:context="com.alarees.tailoruserapp.unstitched.UnstitchedItemsFragment">
     <LinearLayout
         android:layout_width="match_parent"
@@ -36,6 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:id="@+id/unstitched_container"
         android:background="@drawable/background">
 
     <FrameLayout
