--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,13 +12,14 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="black">#FFFFFF</color>
+    <color name="white">#FF000000</color>
     <color name="textcolor">#C0C0C0</color>
     <color name="whitegrey">#F5F5F5</color>
     <color name="orange">#C49A2E</color>
     <color name="textviewcolor">#836823</color>
     <color name="yellow">#FFFF00</color>
+    <color name="border_night">#FFFFFF</color>
 
 
 </resources>
