--- a/app/src/main/res/drawable/rounded_add.xml
+++ b/app/src/main/res/drawable/rounded_add.xml
@@ -13,7 +13,7 @@
                 android:topLeftRadius="20dp"
                 android:topRightRadius="20dp" />
 
-            <stroke android:color="@color/white"
+            <stroke android:color="@android:color/white"
                 android:width="1dp" />
 
         </shape>
@@ -30,7 +30,8 @@
                 android:topLeftRadius="20dp"
                 android:topRightRadius="20dp" />
 
-            <stroke android:color="@color/white"
+            <stroke android:color="@android:color/white"
+
                 android:width="1dp" />
 
         </shape>
