--- a/app/src/main/res/layout/activity_confirmation.xml
+++ b/app/src/main/res/layout/activity_confirmation.xml
@@ -2,42 +2,48 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/confirmation_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/green_900"
     android:orientation="vertical"
     tools:context="com.alarees.tailoruserapp.paymentgetway.ConfirmationActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/back_confirmation"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@drawable/ic_baseline_arrow_white_24" />
+            android:background="@color/green_900"
+            android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="@string/confirmation"
-            android:textAlignment="viewStart"
-            android:textAppearance="?attr/textAppearanceHeadline5"
-            android:textColor="@color/white"
-            android:textStyle="bold" />
+            <ImageView
+                android:id="@+id/back_confirmation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:background="@drawable/ic_baseline_arrow_back_white_24" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="@string/confirmation"
+                android:textAlignment="viewStart"
+                android:textAppearance="?attr/textAppearanceHeadline5"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/shape"
         android:orientation="vertical">
+
         <ImageView
             android:id="@+id/statusimage"
             android:layout_width="200dp"
@@ -47,32 +53,35 @@
 
         <TextView
             android:id="@+id/congrates"
+            style="@style/Font"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/fidena"
             android:gravity="center"
             android:padding="5dp"
             android:text="@string/congratulation"
-            style="@style/Font"
-            android:textColor="@color/colorblack"
+            android:textColor="@color/white"
             android:textSize="22dp"
             android:textStyle="bold" />
+
         <TextView
             android:id="@+id/status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/succesfully_processed"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:textSize="14sp"/>
+            android:text="@string/succesfully_processed"
+            android:textSize="16sp" />
+
         <TableLayout
             android:id="@+id/pop"
             android:layout_width="match_parent"
             android:layout_height="110dp"
+            android:background="@drawable/hallow_round_black_bg"
             android:layout_marginStart="12dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="12dp"
-            android:background="@drawable/hallow_round_black_bg"
             android:padding="4dp">
 
             <TableRow>
@@ -90,7 +99,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="4dp"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
             </TableRow>
 
             <TableRow>
@@ -108,7 +117,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="4dp"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
             </TableRow>
 
             <TableRow>
@@ -126,8 +135,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="4dp"
-                    android:textSize="16sp"
-                    />
+                    android:textSize="16sp" />
             </TableRow>
 
         </TableLayout>
@@ -135,11 +143,11 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Thanks for your payments"
             android:layout_gravity="center"
-            android:visibility="invisible"
             android:layout_marginTop="16sp"
-            android:textSize="24dp"/>
+            android:text="Thanks for your payments"
+            android:textSize="24dp"
+            android:visibility="invisible" />
 
         <Button
             android:id="@+id/continue_shopping"
