--- a/app/src/main/res/layout/activity_side.xml
+++ b/app/src/main/res/layout/activity_side.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/background"
+    android:id="@+id/container_sideactivity"
     tools:context="com.alarees.tailoruserapp.measurement.SideActivity">
 
     <TextView
