--- a/app/src/main/res/layout/dailog_readymade.xml
+++ b/app/src/main/res/layout/dailog_readymade.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="200dp"
-    android:layout_height="200dp"
+    android:layout_height="180dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="20dp"
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,7 +17,7 @@
             android:textAlignment="center"
             android:textSize="20sp"
             android:padding="10dp"
-            android:textColor="@color/black"
+            android:textColor="@android:color/black"
             android:textStyle="bold"/>
         <TextView
             android:id="@+id/rdymd_small"
@@ -46,4 +48,4 @@
             android:text="Large"
             android:textSize="18sp"/>
     </LinearLayout>
-</LinearLayout>
+</com.google.android.material.card.MaterialCardView>
