--- a/app/src/main/res/layout/fragment_how_to.xml
+++ b/app/src/main/res/layout/fragment_how_to.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:id="@+id/container_howto"
     android:background="@drawable/background"
     tools:context="com.alarees.tailoruserapp.measurement.HowToFragment">
 
