--- a/app/src/main/res/layout/fragment_more_item_list.xml
+++ b/app/src/main/res/layout/fragment_more_item_list.xml
@@ -18,6 +18,7 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/logomore"
             android:layout_width="150dp"
             android:layout_height="100dp"
             android:layout_gravity="center"
@@ -30,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="20dp"
-        android:alpha="0.5"
+        android:alpha="0.8"
         app:layoutManager="LinearLayoutManager"
         tools:listitem="@layout/fragment_more_item"/>
 </LinearLayout>
