--- a/app/src/main/res/layout/fragment_my_account_detail.xml
+++ b/app/src/main/res/layout/fragment_my_account_detail.xml
@@ -4,14 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/whitegrey"
+    android:id="@+id/container"
     tools:context="com.alarees.tailoruserapp.account.MyAccountDetailFragment">
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:animateLayoutChanges="true"
-            android:background="@drawable/background"
             android:fillViewport="true"
             android:orientation="vertical">
 
@@ -26,6 +25,7 @@
                     android:layout_weight="2.8"
                     android:orientation="vertical">
                     <ImageView
+                        android:id="@+id/logo"
                         android:layout_width="200dp"
                         android:layout_marginTop="10dp"
                         android:layout_height="150dp"
@@ -177,7 +177,7 @@
                                 android:text="in KG"
                                 android:alpha="0.5"
                                 android:backgroundTint="@color/textviewcolor"
-                                android:textColor="@color/textcolor"
+                                android:textColor="@color/white"
                                 android:textColorHint="@color/grey"
                                 />
                         </LinearLayout>
