--- a/app/src/main/res/layout/fragment_parent_measurement_detail.xml
+++ b/app/src/main/res/layout/fragment_parent_measurement_detail.xml
@@ -1,35 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/green_900"
+    android:background="@drawable/background"
     android:orientation="vertical"
     tools:context="com.alarees.tailoruserapp.measurement.ParentMeasurementDetail">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
+        android:background="@color/green_900"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/back_measurement"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@drawable/ic_baseline_arrow_back_white_24" />
-
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="@string/my_measurement"
-            android:textAlignment="viewStart"
-            android:textAppearance="?attr/textAppearanceHeadline5"
-            android:textColor="@color/white"
-            android:textStyle="bold" />
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="4dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/back_measurement"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/ic_baseline_arrow_back_white_24" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="@string/my_measurement"
+                android:textAlignment="viewStart"
+                android:textAppearance="?attr/textAppearanceHeadline5"
+                android:textColor="@color/whitetitle"
+                android:textStyle="bold" />
+        </LinearLayout>
     </LinearLayout>
 
     <ProgressBar
@@ -44,25 +53,28 @@
         android:id="@+id/scrollcontainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/background">
+
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:background="@color/grey">
+                android:background="@color/grey"
+                android:gravity="center">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="10dp"
+                    android:fontFamily="@font/fidena"
                     android:text="@string/basic_lengths"
                     android:textColor="@color/yellow"
-                    android:fontFamily="@font/fidena"
                     android:textSize="18sp"
                     android:textStyle="bold" />
             </RelativeLayout>
@@ -112,9 +124,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:alpha="0.7"
                 android:background="@color/green_900"
-                android:orientation="horizontal"
-                android:alpha="0.7">
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="0dp"
@@ -154,9 +166,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
+                android:alpha="0.7"
                 android:background="@color/green_900"
-                android:alpha="0.7">
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="0dp"
@@ -181,9 +193,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
+                android:alpha="0.7"
                 android:background="@color/green_900"
-                android:alpha="0.7">
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="0dp"
@@ -191,7 +203,7 @@
                     android:layout_weight="1"
                     android:padding="10dp"
                     android:text="Arm length"
-                    android:textColor="@color/white"/>
+                    android:textColor="@color/white" />
 
                 <TextView
                     android:id="@+id/id_underarmlength"
@@ -208,7 +220,7 @@
                     android:layout_weight="1"
                     android:padding="10dp"
                     android:text="Shoulders"
-                    android:textColor="@color/white"/>
+                    android:textColor="@color/white" />
 
                 <TextView
                     android:id="@+id/id_shoulders"
@@ -224,9 +236,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
+                android:alpha="0.7"
                 android:background="@color/green_900"
-                android:alpha="0.7">
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="0dp"
@@ -234,7 +246,7 @@
                     android:layout_weight="1"
                     android:padding="10dp"
                     android:text="Upper hip height"
-                    android:textColor="@color/white"/>
+                    android:textColor="@color/white" />
 
                 <TextView
                     android:id="@+id/id_upperhipheight"
@@ -269,8 +281,8 @@
                         android:layout_width="100dp"
                         android:layout_height="wrap_content"
                         android:text="View more"
-                        android:textColor="@color/yellow"
-                        android:textAlignment="viewStart" />
+                        android:textAlignment="viewStart"
+                        android:textColor="@color/yellow" />
 
                 </LinearLayout>
             </LinearLayout>
@@ -286,23 +298,25 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="10dp"
+                        android:fontFamily="@font/fidena"
                         android:text="@string/side_lengths"
                         android:textColor="@color/yellow"
-                        android:fontFamily="@font/fidena"
                         android:textSize="18sp"
                         android:textStyle="bold" />
                 </RelativeLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal"
                     android:alpha="0.7"
-                    android:background="@color/green_900">
+                    android:background="@color/green_900"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="0dp"
@@ -310,7 +324,7 @@
                         android:layout_weight="1"
                         android:padding="10dp"
                         android:text="Body Area %"
-                        android:textColor="@color/white"/>
+                        android:textColor="@color/white" />
 
                     <TextView
                         android:id="@+id/body_area_percentage"
@@ -327,7 +341,7 @@
                         android:layout_weight="1"
                         android:padding="10dp"
                         android:text="Upper hip to knee"
-                        android:textColor="@color/white"/>
+                        android:textColor="@color/white" />
 
                     <TextView
                         android:id="@+id/side_upper_hip_level_to_knee"
@@ -343,9 +357,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal"
                     android:alpha="0.7"
-                    android:background="@color/green_900">
+                    android:background="@color/green_900"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="0dp"
@@ -353,7 +367,7 @@
                         android:layout_weight="1"
                         android:padding="10dp"
                         android:text="Neck to upper hip"
-                        android:textColor="@color/white"/>
+                        android:textColor="@color/white" />
 
                     <TextView
                         android:id="@+id/side_neck_point_to_upper_hip"
@@ -370,7 +384,7 @@
                         android:layout_weight="1"
                         android:padding="10dp"
                         android:text="Nech to chest"
-                        android:textColor="@color/white"/>
+                        android:textColor="@color/white" />
 
                     <TextView
                         android:id="@+id/neck_to_chest"
@@ -386,9 +400,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal"
                     android:alpha="0.7"
-                    android:background="@color/green_900">
+                    android:background="@color/green_900"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="0dp"
@@ -396,7 +410,7 @@
                         android:layout_weight="1"
                         android:padding="10dp"
                         android:text="Chest to waist"
-                        android:textColor="@color/white"/>
+                        android:textColor="@color/white" />
 
                     <TextView
                         android:id="@+id/chest_to_waist"
@@ -413,7 +427,7 @@
                         android:layout_weight="1"
                         android:padding="10dp"
                         android:text="Waist to ankle"
-                        android:textColor="@color/white"/>
+                        android:textColor="@color/white" />
 
                     <TextView
                         android:id="@+id/waist_to_ankle"
@@ -429,9 +443,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal"
                     android:alpha="0.7"
-                    android:background="@color/green_900">
+                    android:background="@color/green_900"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="0dp"
@@ -439,7 +453,7 @@
                         android:layout_weight="1"
                         android:padding="10dp"
                         android:text="Body shoulders to knees %"
-                        android:textColor="@color/white"/>
+                        android:textColor="@color/white" />
 
                     <TextView
                         android:id="@+id/shoulders_to_knees"
@@ -457,14 +471,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="10dp"
+                        android:fontFamily="@font/fidena"
                         android:text="@string/font_lengths"
                         android:textColor="@color/yellow"
-                        android:fontFamily="@font/fidena"
                         android:textSize="18sp"
                         android:textStyle="bold" />
                 </RelativeLayout>
@@ -472,9 +487,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal"
                     android:alpha="0.7"
-                    android:background="@color/green_900">
+                    android:background="@color/green_900"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="0dp"
@@ -482,7 +497,7 @@
                         android:layout_weight="1"
                         android:padding="10dp"
                         android:text="Body height"
-                        android:textColor="@color/white"/>
+                        android:textColor="@color/white" />
 
                     <TextView
                         android:id="@+id/body_height"
@@ -499,7 +514,7 @@
                         android:layout_weight="1"
                         android:padding="10dp"
                         android:text="Sleeve length"
-                        android:textColor="@color/white"/>
+                        android:textColor="@color/white" />
 
                     <TextView
                         android:id="@+id/sleeve_length"
@@ -515,9 +530,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal"
                     android:alpha="0.7"
-                    android:background="@color/green_900">
+                    android:background="@color/green_900"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="0dp"
@@ -525,7 +540,7 @@
                         android:layout_weight="1"
                         android:padding="10dp"
                         android:text="underarm length"
-                        android:textColor="@color/white"/>
+                        android:textColor="@color/white" />
 
                     <TextView
                         android:id="@+id/underarm_length"
@@ -542,7 +557,7 @@
                         android:layout_weight="1"
                         android:padding="10dp"
                         android:text="Shoulder length"
-                        android:textColor="@color/white"/>
+                        android:textColor="@color/white" />
 
                     <TextView
                         android:id="@+id/shoulder_length"
@@ -558,9 +573,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal"
                     android:alpha="0.7"
-                    android:background="@color/green_900">
+                    android:background="@color/green_900"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="0dp"
@@ -568,7 +583,7 @@
                         android:layout_weight="1"
                         android:padding="10dp"
                         android:text="Upper arm length"
-                        android:textColor="@color/white"/>
+                        android:textColor="@color/white" />
 
                     <TextView
                         android:id="@+id/upper_arm_length"
@@ -585,7 +600,7 @@
                         android:layout_weight="1"
                         android:padding="10dp"
                         android:text="Lower aram length"
-                        android:textColor="@color/white"/>
+                        android:textColor="@color/white" />
 
                     <TextView
                         android:id="@+id/lower_arm_length"
@@ -601,9 +616,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal"
                     android:alpha="0.7"
-                    android:background="@color/green_900">
+                    android:background="@color/green_900"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="0dp"
@@ -611,7 +626,7 @@
                         android:layout_weight="1"
                         android:padding="10dp"
                         android:text="Neck length"
-                        android:textColor="@color/white"/>
+                        android:textColor="@color/white" />
 
                     <TextView
                         android:id="@+id/neck_length"
@@ -628,7 +643,7 @@
                         android:layout_weight="1"
                         android:padding="10dp"
                         android:text="rise"
-                        android:textColor="@color/white"/>
+                        android:textColor="@color/white" />
 
                     <TextView
                         android:id="@+id/rise"
