--- a/app/src/main/res/layout/fragment_porgress.xml
+++ b/app/src/main/res/layout/fragment_porgress.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    android:background="@drawable/background"
+    android:id="@+id/container_progress"
     tools:context="com.alarees.tailoruserapp.measurement.ProgressFragment">
 
     <TextView
