--- a/app/src/main/res/layout/fragment_ready_made_items.xml
+++ b/app/src/main/res/layout/fragment_ready_made_items.xml
@@ -4,69 +4,75 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/green_900"
     android:orientation="vertical"
+    android:id="@+id/container_readymade"
     tools:context="com.alarees.tailoruserapp.readymade.ReadyMadeItemsFragment">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
+        android:background="@color/green_900"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/back_readylist"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@drawable/ic_baseline_arrow_back_white_24" />
-
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="@string/readymade"
-            android:textAlignment="viewStart"
-            android:textAppearance="?attr/textAppearanceHeadline5"
-            android:textColor="@color/white"
-            android:textStyle="bold" />
-    </LinearLayout>
-   <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:id="@+id/readymade_container"
-       android:background="@drawable/background"
-       android:orientation="vertical">
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:padding="10dp"
-        tools:ignore="UselessParent">
+            android:layout_marginTop="12dp"
+            android:layout_margin="4dp"
+            android:orientation="horizontal">
 
-        <devlight.io.library.ntb.NavigationTabBar
-            android:id="@+id/s"
-            android:layout_width="200dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            app:ntb_active_color="#8d88e4"
-            app:ntb_animation_duration="400"
-            app:ntb_bg_color="@color/green_900"
-            app:ntb_corners_radius="30dp"
-            app:ntb_inactive_color="#dddfec"
-            app:ntb_preview_colors="@array/white_marble"
-            app:ntb_scaled="false" />
-    </FrameLayout>
+            <ImageView
+                android:id="@+id/back_readylist"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/ic_baseline_arrow_back_white_24" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="@string/readymade"
+                android:textAlignment="viewStart"
+                android:textAppearance="?attr/textAppearanceHeadline5"
+                android:textColor="@color/whitetitle"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        android:orientation="vertical">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/id_readymade_list"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
+            android:layout_height="55dp"
+            android:padding="10dp"
+            tools:ignore="UselessParent">
+
+            <devlight.io.library.ntb.NavigationTabBar
+                android:id="@+id/s"
+                android:layout_width="200dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                app:ntb_active_color="#8d88e4"
+                app:ntb_animation_duration="400"
+                app:ntb_bg_color="@color/green_900"
+                app:ntb_corners_radius="30dp"
+                app:ntb_inactive_color="#dddfec"
+                app:ntb_preview_colors="@array/white_marble"
+                app:ntb_scaled="false" />
+        </FrameLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/id_readymade_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </LinearLayout>
     </LinearLayout>
-   </LinearLayout>
 </LinearLayout>
