--- a/app/src/main/res/layout/mlistview.xml
+++ b/app/src/main/res/layout/mlistview.xml
@@ -4,16 +4,16 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:id="@+id/id_child_container"
-    android:padding="10dp"
-    android:alpha="0.7"
+    android:padding="4dp"
+    android:alpha="0.6"
     >
     <TextView
         android:id="@+id/id_child_measurement"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
+        android:padding="10dp"
         android:text="@string/my_measurement"
-        android:background="@color/grey"
+        android:background="@color/green_900"
         android:textSize="18sp"
         android:textStyle="bold"
         android:textColor="@color/white" />
