--- a/app/src/main/res/layout/order_view.xml
+++ b/app/src/main/res/layout/order_view.xml
@@ -5,10 +5,11 @@
     android:layout_margin="2dp"
     android:backgroundTint="@color/cardview_shadow_end_color"
     android:padding="5dp">
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/background">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -17,46 +18,49 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:alpha="0.7"
                 android:background="@color/whitegrey"
-                android:alpha="0.5"
                 android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:textAlignment="center"
                     android:layout_weight="1"
-                    android:textAllCaps="true"
                     android:paddingTop="10dp"
-                    android:textColor="@color/green_900"
-                    android:text="Order ID" />
+                    android:text="Order ID"
+                    android:textAlignment="center"
+                    android:textAllCaps="true"
+                    android:textColor="@color/green_900" />
+
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:textAlignment="center"
                     android:layout_weight="1"
                     android:paddingTop="10dp"
+                    android:text="Order Type"
+                    android:textAlignment="center"
                     android:textAllCaps="true"
-                    android:textColor="@color/green_900"
-                    android:text="Order Type" />
+                    android:textColor="@color/green_900" />
+
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:textAllCaps="true"
                     android:layout_weight="1"
                     android:paddingTop="10dp"
+                    android:text="Order Status"
                     android:textAlignment="center"
-                    android:textColor="@color/green_900"
-                    android:text="Order Status" />
+                    android:textAllCaps="true"
+                    android:textColor="@color/green_900" />
+
                 <TextView
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:textAllCaps="true"
-                    android:textAlignment="center"
+                    android:layout_weight="1"
                     android:paddingTop="10dp"
-                    android:textColor="@color/green_900"
-                    android:text="Date" />
+                    android:text="Date"
+                    android:textAlignment="center"
+                    android:textAllCaps="true"
+                    android:textColor="@color/green_900" />
 
             </LinearLayout>
 
@@ -70,30 +74,31 @@
                     android:id="@+id/id_orderid"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:textAlignment="center"
                     android:layout_weight="1"
+                    android:padding="10dp"
                     android:text="Order ID"
-                    android:textColor="@color/white"/>
+                    android:textAlignment="center"
+                    android:textColor="@color/white" />
 
                 <TextView
                     android:id="@+id/order_ordertype"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:padding="10dp"
                     android:layout_weight="1"
-                    android:textAlignment="center"
+                    android:padding="10dp"
                     android:text="Order Type"
+                    android:textAlignment="center"
                     android:textColor="@color/green_900" />
+
                 <TextView
                     android:id="@+id/id_status"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:layout_weight="1"
-                    android:textAlignment="center"
                     android:layout_marginStart="10dp"
+                    android:layout_weight="1"
+                    android:padding="10dp"
                     android:text="status"
+                    android:textAlignment="center"
                     android:textColor="@color/white" />
 
                 <TextView
@@ -105,6 +110,6 @@
                     android:text="13/19/2020"
                     android:textColor="@color/green_900" />
             </LinearLayout>
-            </LinearLayout>
-</ScrollView>
+        </LinearLayout>
+    </ScrollView>
 </androidx.cardview.widget.CardView>
