--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FFFFFF</color>
     <color name="white">#FF000000</color>
+    <color name="whitetitle">#FFFFFF</color>
     <color name="textcolor">#C0C0C0</color>
     <color name="whitegrey">#F5F5F5</color>
     <color name="orange">#C49A2E</color>
