completed bugs resolved

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <!--    <color name="green_900">#051094</color>-->
     <!--    #27B07C-->
     <color name="green_900">#C49A2E</color>
+    <color name="transparent_900">#E6D7AB</color>
     <color name="colorred">#FF2D55</color>
     <color name="colorblack">#0F0F0F</color>
     <color name="grey">#808080</color>
