--- a/app/src/main/res/layout/cart_view.xml
+++ b/app/src/main/res/layout/cart_view.xml
@@ -14,6 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layoutDirection="ltr"
+        android:background="@android:color/white"
+
         android:orientation="horizontal">
 
         <androidx.cardview.widget.CardView
@@ -21,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="3dp"
             app:cardCornerRadius="5dp"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@android:color/white"
             app:cardElevation="5dp">
 
             <com.facebook.drawee.view.SimpleDraweeView
