--- a/app/src/main/res/layout/fragment_signin.xml
+++ b/app/src/main/res/layout/fragment_signin.xml
@@ -39,7 +39,7 @@
                     android:layout_gravity="center"
                     android:layout_margin="10dp"
                     android:id="@+id/logo"
-                    android:src="@drawable/ic_logo1" />
+                    />
             </LinearLayout>
 
             <LinearLayout
@@ -208,6 +208,7 @@
                         android:padding="8dp"
                         android:textAlignment="center"
                         android:layout_gravity="center"
+                        android:textColor="@android:color/black"
                         android:text="Sign in with Google" />
                 </LinearLayout>
 
