--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/container"
     tools:context="com.alarees.tailoruserapp.account.SignUpFragment">
 
     <ScrollView
@@ -24,24 +24,25 @@
                 android:layout_height="match_parent"
                 android:layout_weight="2.8"
                 android:orientation="vertical">
+
                 <ImageView
                     android:id="@+id/logo"
                     android:layout_width="200dp"
-                    android:layout_marginTop="10dp"
                     android:layout_height="150dp"
                     android:layout_gravity="center"
-                    android:background="@drawable/ic_logo1"/>
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/ic_logo1" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:fontFamily="@font/fidena"
                     android:padding="5dp"
                     android:text="@string/Create_your_account"
+                    android:textAlignment="center"
                     android:textColor="@color/green_900"
                     android:textSize="18sp"
-                    android:layout_marginTop="5dp"
-                    android:textAlignment="center"
-                    android:fontFamily="@font/fidena"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -62,15 +63,15 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:paddingEnd="10dp"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:paddingEnd="10dp">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/first_name"
                             android:fontFamily="@font/fidena"
-                            android:textColor="@color/white"/>
+                            android:text="@string/first_name"
+                            android:textColor="@color/white" />
 
                         <EditText
                             android:id="@+id/ed_fname"
@@ -91,15 +92,15 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:paddingStart="10dp"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:paddingStart="10dp">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/last_name"
                             android:fontFamily="@font/fidena"
-                            android:textColor="@color/white"/>
+                            android:text="@string/last_name"
+                            android:textColor="@color/white" />
 
                         <EditText
                             android:id="@+id/ed_lname"
@@ -115,6 +116,7 @@
                     </LinearLayout>
 
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -124,15 +126,15 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:paddingEnd="10dp"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:paddingEnd="10dp">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/height"
                             android:fontFamily="@font/fidena"
-                            android:textColor="@color/white"/>
+                            android:text="@string/height"
+                            android:textColor="@color/white" />
 
                         <EditText
                             android:id="@+id/ed_height"
@@ -141,11 +143,11 @@
                             android:layout_marginEnd="4dp"
                             android:alpha="0.5"
                             android:background="@drawable/hallow_round_black_bg"
-                            android:hint="@string/_150_n_220"
                             android:backgroundTint="@color/textviewcolor"
-                            android:textColor="@color/white"
+                            android:hint="@string/_150_n_220"
                             android:inputType="numberDecimal"
                             android:padding="4dp"
+                            android:textColor="@color/white"
                             android:textColorHint="@color/textcolor" />
 
                     </LinearLayout>
@@ -154,38 +156,39 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:paddingStart="10dp"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:paddingStart="10dp">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/fidena"
                             android:text="@string/weight"
-                            android:textColor="@color/white"/>
+                            android:textColor="@color/white" />
 
                         <EditText
                             android:id="@+id/ed_weight"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
-                            android:background="@drawable/hallow_round_black_bg"
-                            android:hint="in KG"
                             android:alpha="0.5"
-                            android:inputType="numberDecimal"
+                            android:background="@drawable/hallow_round_black_bg"
                             android:backgroundTint="@color/textviewcolor"
+                            android:hint="in KG"
+                            android:inputType="numberDecimal"
                             android:padding="4dp"
                             android:textColor="@color/textcolor"
                             android:textColorHint="@color/textcolor" />
                     </LinearLayout>
 
                 </LinearLayout>
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="@string/email_address"
                     android:fontFamily="@font/fidena"
-                    android:textColor="@color/white"/>
+                    android:text="@string/email_address"
+                    android:textColor="@color/white" />
 
                 <EditText
                     android:id="@+id/ed_email"
@@ -203,30 +206,31 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="@string/password"
                     android:fontFamily="@font/fidena"
-                    android:textColor="@color/white"/>
+                    android:text="@string/password"
+                    android:textColor="@color/white"
+                    android:visibility="gone" />
 
                 <EditText
                     android:id="@+id/ed_password"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
+                    android:alpha="0.5"
                     android:background="@drawable/hallow_round_black_bg"
+                    android:backgroundTint="@color/textviewcolor"
                     android:inputType="textPassword"
                     android:padding="4dp"
-                    android:backgroundTint="@color/textviewcolor"
                     android:textColor="@color/white"
-                    android:alpha="0.5"
-                    android:textColorHint="@color/black" />
+                    android:textColorHint="@color/black"
+                    android:visibility="gone" />
 
                 <TextView
                     android:layout_width="wrap_content"
-                    android:fontFamily="@font/fidena"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
+                    android:fontFamily="@font/fidena"
                     android:text="@string/phone_no"
-                    android:textColor="@color/white"
-                    />
+                    android:textColor="@color/white" />
 
                 <EditText
                     android:id="@+id/ed_mobile"
@@ -236,6 +240,7 @@
                     android:background="@drawable/hallow_round_black_bg"
                     android:backgroundTint="@color/textviewcolor"
                     android:inputType="number"
+
                     android:padding="4dp"
                     android:textColor="@color/white" />
 
@@ -245,7 +250,7 @@
                     android:layout_marginTop="10dp"
                     android:fontFamily="@font/fidena"
                     android:text="@string/address"
-                    android:textColor="@color/white"/>
+                    android:textColor="@color/white" />
 
                 <EditText
                     android:id="@+id/ed_address"
@@ -269,17 +274,18 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="38dp"
+                    android:fontFamily="@font/fidena"
                     android:gravity="center"
                     android:text="@string/by_signing_up_you_agree_to_our_terms_and_policy"
-                    android:fontFamily="@font/fidena"
                     android:textColor="@color/white" />
+
                 <Button
                     android:id="@+id/btn_singup"
-                    android:fontFamily="@font/fidena"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
+                    android:fontFamily="@font/fidena"
                     android:text="@string/Signup"
                     android:textAllCaps="false"
                     android:textColor="@color/white" />
