--- a/app/src/main/res/layout/type_view.xml
+++ b/app/src/main/res/layout/type_view.xml
@@ -5,6 +5,7 @@
     android:layout_height="110dp"
     android:layout_margin="2dp"
     android:padding="2dp"
+    android:background="@android:color/white"
     android:orientation="vertical">
 <!--    android:clickable="true"-->
 <!--    android:focusable="true"-->
@@ -14,6 +15,7 @@
         android:id="@+id/id_type_view"
         android:layout_width="95dp"
         android:layout_height="110dp"
+        app:cardBackgroundColor="@android:color/white"
         app:cardCornerRadius="10dp"
         app:rippleColor="@color/white"
         android:layout_gravity="center"
